# SVP

./: ScratchVideoPlayer.sb3
DecVST/: CMakeLists.txt  CMakePresets.json  DecVST.cpp
